--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header_container">
-        <img src="../public/download.png" alt="ragging.png">
+        <a href="../index.php"><img src="../public/ragging2.png" alt="logo" /></a>
         <div class="navbar">
             <div class="logo">
                 <a href="index.php"><img src="../public/logo.png" alt="logo" /></a>
