--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="../index.php"><img src="../public/ragging2.png" alt="logo" /></a>
         <div class="navbar">
             <div class="logo">
-                <a href="index.php"><img src="../public/logo.png" alt="logo" /></a>
+                <a href="index.php"><img src="../public/download.png" alt="logo" /></a>
             </div>
             <div class="navbar-center">
                 <a href="index.html">Home</a>
