--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div class="header_container">
-        <a href="../index.php"><img src="ragging2.png" alt="logo" /></a>
+        <a href="../index.php"><img src="logo.png" alt="logo" /></a>
         <div class="navbar">
             <div class="logo">
-                <a href="index.php"><img src="../public/download.png" alt="logo" /></a>
+                <a href="index.php"><img src="../public/ragging2.png" alt="logo" /></a>
             </div>
             <div class="navbar-center">
                 <a href="index.html">Home</a>
