--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div class="header_container">
-        <a href="../index.php"><img src="logo.png" alt="logo" /></a>
+        <a href="../index.php"><img src="../public/ragging2.png" alt="logo" /></a>
         <div class="navbar">
             <div class="logo">
-                <a href="index.php"><img src="../public/ragging2.png" alt="logo" /></a>
+                <a href="index.php"><img src="logo.png" alt="logo" /></a>
             </div>
             <div class="navbar-center">
                 <a href="index.html">Home</a>
@@ -41,12 +41,12 @@
           <p>Become victims to ragging everyday</p>
         </div>
         <div class="count2">
-          <h1>24</h1>
-          <p>Impact in sectors</p>
+          <h1>45%</h1>
+          <p>Increase in ragging annually</p>
         </div>
         <div class="count3">
-          <h1>2932</h1>
-          <p>Raised so far!</p>
+          <h1>45,00,000</h1>
+          <p>Affected so far</p>
         </div>
       </div>
     <div class="about_section">
@@ -67,6 +67,7 @@
         </div>
     </div>
     <div class="news_section">
+        <h1>University Updates</h1><br>
         <div class="news-items-container">
         <div class="news_items">
             <div class="news-item">
