--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header_container">
-        <img src="../public/ragging2.png" alt="ragging" />
+        <img src="ragging2.png" alt="ragging" />
         <div class="navbar">
             <div class="logo">
                 <a href="index.php"><img src="logo.png" alt="logo" /></a>
