--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -16,7 +16,7 @@
 <body>
     <div class="navbar-rest">
         <div class="logo">
-            <a href="../index.php"><img src="../../../public/logo.png" alt="logo" /></a>
+          <a href="../index.php"><img src="../../logo.png" alt="logo" /></a>        
         </div>
         <div class="navbar-center">
             <a href="../../index.html">Home</a>
@@ -25,7 +25,7 @@
             <a href="../contact/contact.html">Contact</a>
         </div>
         <div class="navbar-right">
-            <a class="startcamp" href="../contact/contact.html" style="color: white;">Start a Campaign</a>
+            <a class="startcamp" href="../contact/contact.html" style="color: white;">Report Ragging</a>
         </div>
     </div>
 
@@ -56,8 +56,8 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <label for="query">Query</label><br>
-                        <textarea name="query" placeholder="Enter your query/message..."></textarea>
+                        <label for="query">Report/Query</label><br>
+                        <textarea name="query" placeholder="Enter your query/report here..."></textarea>
                     </td>
                 </tr>
             </table>
