--- a/pages/testimonials/testimonial.html
+++ b/pages/testimonials/testimonial.html
@@ -13,40 +13,55 @@
     />
 </head>
 <body>
+    <div class="navbar-rest">
+        <div class="logo">
+            <a href="../index.php"><img src="../../logo.png" alt="logo" /></a>
+        </div>
+        <div class="navbar-center">
+            <a href="../../index.html">Home</a>
+            <a href="../testimonials/testimonial.html">Testimonials</a>
+            <a href="../about/about.html">About</a>
+            <a href="../contact/contact.html">Contact</a>
+        </div>
+        <div class="navbar-right">
+            <a class="startcamp" href="../contact/contact.html">Report Ragging</a>
+        </div>
+    </div>
+
     <div class="testimonial_container">
         <h1>Stories</h1>
         <hr/>
         <div class="stories">
             <div class="story">
                 <div class="img-container">
-                    <img src="https://thumbs.dreamstime.com/b/asian-indian-businessman-good-looking-mature-business-suit-smiling-isolated-white-background-portrait-handsome-31871432.jpg" alt="User1">
+                    <img src="https://media.istockphoto.com/id/509349623/photo/happy-bookworm.jpg?s=612x612&w=0&k=20&c=2fPCQ8plw0TmUZH2tlnCTEkCrmbG_nkihDmyJPrg-EY=" alt="User1">
                 </div>
                 <div class="text-container">
-                    <h3>Vijay Saxena</h3><br>
+                    <h3>Sam Nate</h3><br>
                     <p>
-                        When I had the idea for EcoSpark, a project to install solar panels in my community, I knew funding would be a challenge. Traditional investors were hesitant, so I turned to Crowdfund Dreams. 
+                        "When I first joined college, I was filled with excitement and hope, but it quickly turned into a nightmare when a group of seniors started ragging me. They mocked my background, humiliated me, and threatened my academic future. <br>I felt scared and alone, but I knew I had to do something. With a heavy heart, I reported the incidents to the anti-ragging committee. <br>The support I received was overwhelming, and the seniors were suspended. Standing up for myself not only helped me overcome the trauma, but it also inspired others to speak out. Today, I’m thriving in my studies, and I’m proud that my actions contributed to a safer environment for everyone."
                     </p>
                 </div>
             </div>
             <div class="story">
                 <div class="img-container">
-                    <img src="https://media.istockphoto.com/id/1036079868/photo/you-can-tell-shes-a-true-go-getter.jpg?s=612x612&w=0&k=20&c=FUkkh482NlDgVtQxfXRX-QSB9JVenYwEntUV4LngZOk=" alt="User2">
+                    <img src="https://as2.ftcdn.net/v2/jpg/05/76/75/39/1000_F_576753965_UPYWF1GHjZuQfQo0Qupv776ubn5uWaiJ.jpg" alt="User2">
                 </div>
                 <div class="text-container">
-                    <h3>Priya Sharma</h3><br>
+                    <h3>Vinicius Junior</h3><br>
                     <p>
-                        As the CEO of Green Earth Initiative, I have witnessed firsthand the incredible impact that community support can have on a project.
+                        "Starting law school was a dream come true, but the joy quickly faded when I became a target of ragging by some seniors. They insulted me, mocked my appearance, and forced me into degrading activities. <br>I felt crushed and even considered leaving, but I decided to take a stand and reported the incidents to the anti-ragging helpline. The authorities acted swiftly, punishing the culprits and tightening the rules to prevent future cases. <br>Reporting the ragging not only ended my suffering but also empowered me to join the college's anti-ragging committee, where I now work to ensure no other student goes through what I did. <br>Today, I’m on my way to becoming a lawyer, stronger and more determined than ever."
                     </p>
                 </div>
             </div>
             <div class="story">
                 <div class="img-container">
-                    <img src="https://r2.erweima.ai/imgcompressed/img/compressed_6a27743ae08d87119836833f791c69ad.webp" alt="User3">
+                    <img src="https://media.istockphoto.com/id/1047528802/photo/portrait-of-smiling-male-high-school-student-outside-college-building-with-other-teenage.jpg?s=612x612&w=0&k=20&c=xiFmbda0_9GK7FRwvXbUSEWun88J8EHlRYTt0G44suY=" alt="User3">
                 </div>
                 <div class="text-container">
-                    <h3>Rohan Patel</h3><br>
+                    <h3>Anthony Taylor, Medical College Student</h3><br>
                     <p>
-                        As the CEO of Tech4All, I have always believed in the transformative power of technology. Our mission is to bridge the digital divide.
+                        "I joined medical college with dreams of becoming a doctor, but my experience was marred by relentless ragging from a group of seniors. <br>They demeaned me, made me do their assignments, and physically intimidated me. I was terrified and felt trapped, but a trusted professor encouraged me to report the incidents. With his support, I filed a complaint, and the authorities took immediate action, expelling the main perpetrators. <br>Standing up for myself was the hardest thing I’ve ever done, but it also gave me the courage to advocate for others who were too scared to speak out. I’m now focused on my studies, knowing that justice was served."
                     </p>
                 </div>
             </div>
