--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
                 <p>Under laws in India, ragging is defined as. (i) AnV disorderly conduct by either by acts or words spoken, the effect of which is teasing, treating or handling with rudeness any other student; (ii) Any rowdy or undisciplined activity, which causes annoyance, hardship or psychologicai.</p>
             </div>
             <div class="desc_section">
-                <h3>What to?</h3><hr>
-                <p>Under laws in India, ragging is defined as. (i) AnV disorderly conduct by either by acts or words spoken, the effect of which is teasing, treating or handling with rudeness any other student; (ii) Any rowdy or undisciplined activity, which causes annoyance, hardship or psychologicai.</p>
+                <h3>What to do?</h3><hr>
+                <p>If you witness someone being ragged or bullied, it's important to take immediate action to support the victim and address the situation. First, if it's safe, intervene calmly to stop the bullying and let the perpetrators know their behavior is unacceptable. Afterward, offer support to the victim, reassuring them that they're not alone and encouraging them to stay strong. It's crucial to report the incident to the appropriate authorities, such as school or college administrators or the anti-ragging committee, providing as many details as possible. </p>
             </div>
             <div class="desc_section">
-                <h3>What to?</h3><hr>
-                <p>Under laws in India, ragging is defined as. (i) AnV disorderly conduct by either by acts or words spoken, the effect of which is teasing, treating or handling with rudeness any other student; (ii) Any rowdy or undisciplined activity, which causes annoyance, hardship or psychologicai.</p>
+                <h3>Report</h3><hr>
+                <p>Report the incident to:
+                    Dr. Chandan Kumar Behra, Asst. Director Student Welfare<br><br>
+                    Complaints may be filed at the following mail ID:<br><br>
+                    raggingcomplaints@vitbhopal.ac.in<br><br>
+                    ragging@vitbhopal.ac.in<br><br>
+                </p>
             </div>
         </div>
     </div>
