--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -13,9 +13,9 @@
     />
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar-rest">
         <div class="logo">
-            <a href="../../index.php"><img src="../public/logo.png" alt="logo" /></a>
+            <a href="../index.php"><img src="../../logo.png" alt="logo" /></a>        
         </div>
         <div class="navbar-center">
             <a href="../../index.html">Home</a>
@@ -57,6 +57,19 @@
         <h2>Contact Us</h2>
         <p>If you have any questions or need support, please do not hesitate to contact us. Together, we can make a difference and put an end to ragging.</p>
         <a href="../contact/contact.html" class="contact_link">Get in Touch</a>
+    </div>
+    <div class="navbar-bottom">
+        <div class="navbar-container-content">
+            <p>
+                The anti-ragging awareness website is designed to educate students, parents, and educators about the dangers of ragging, providing resources to prevent and address this harmful practice. The site features sections dedicated to news updates on anti-ragging initiatives, statistics highlighting the impact of ragging, real-life testimonials from survivors, and clear guidelines on how to report incidents. With a user-friendly interface, the website aims to create a safe and supportive environment, empowering individuals to speak out against ragging and promoting a culture of respect and inclusion within educational institutions.
+            </p>
+        </div>
+        <div class="navbar-bottom-container">
+            <a href="index.html">Home</a>
+            <a href="pages/testimonials/testimonial.html">Testimonials</a>
+            <a href="pages/about/about.html">About</a>
+            <a href="pages/contact/contact.html">Contact</a>
+        </div>
     </div>
 </body>
 </html>
