--- a/pages/testimonials/testimonial.html
+++ b/pages/testimonials/testimonial.html
@@ -67,5 +67,18 @@
             </div>
         </div>
     </div>
+    <div class="navbar-bottom">
+        <div class="navbar-container-content">
+            <p>
+                The anti-ragging awareness website is designed to educate students, parents, and educators about the dangers of ragging, providing resources to prevent and address this harmful practice. The site features sections dedicated to news updates on anti-ragging initiatives, statistics highlighting the impact of ragging, real-life testimonials from survivors, and clear guidelines on how to report incidents. With a user-friendly interface, the website aims to create a safe and supportive environment, empowering individuals to speak out against ragging and promoting a culture of respect and inclusion within educational institutions.
+            </p>
+        </div>
+        <div class="navbar-bottom-container">
+            <a href="index.html">Home</a>
+            <a href="pages/testimonials/testimonial.html">Testimonials</a>
+            <a href="pages/about/about.html">About</a>
+            <a href="pages/contact/contact.html">Contact</a>
+        </div>
+    </div>
 </body>
 </html>
