--- a/pages/testimonials/testimonial.html
+++ b/pages/testimonials/testimonial.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar-rest">
         <div class="logo">
-            <a href="../index.php"><img src="../../logo.png" alt="logo" /></a>
+            <a href="../../index.html"><img src="../../logo.png" alt="logo" /></a>
         </div>
         <div class="navbar-center">
             <a href="../../index.html">Home</a>
